changes google client id to a placeholder

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-signin-client_id"
-          content="184853849394-v89e96desio4dub3360vg32p1l4r3jqd.apps.googleusercontent.com">
+          content="GOOGLE_OAUTH_CLIENT_ID">
 
     <title>OpenDC</title>
 
