--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <!-- Google Sign-in -->
     <meta name="google-signin-client_id"
-          content="184853849394-v89e96desio4dub3360vg32p1l4r3jqd.apps.googleusercontent.com">
+          content="GOOGLE_OAUTH_CLIENT_ID">
 
     <!-- Set viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
